--- a/styles.css
+++ b/styles.css
@@ -589,3 +589,12 @@ main {
   color: #fff;
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  height: 81px;
+  background-color: #fff !important;
+  border-top: 1px solid #dfe1e6;
+  width: 100vw;
+  padding: 25px;
+}
