Add form validation

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,13 @@ main {
   width: 100vw;
 }
 
+.error {
+  display: none;
+  align-self: center;
+  margin-right: auto;
+  color: red;
+}
+
 .nav-bar {
   width: 100vw;
   height: 48px;
@@ -762,10 +769,10 @@ main {
   color: #f55800;
 }
 
-.form-btn :focus {
+/* .form-btn :focus {
   background: #e05304;
   color: #fff;
-}
+} */
 
 footer {
   display: flex;
